Add nullable annotation, use TDoubleArrayList